# solaya

./: .gitignore  .lsp.json  .mcp.json  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  INDEX.md  Kconfig  Makefile  README.md  REVIEW.md  flake.nix  justfile  qemu_wrapper.sh  rust-analyzer.toml  rust-toolchain.toml
arch/: Cargo.toml  (+1 more)
common/: Cargo.toml
common/src/: cpu.rs  ioctl.rs
crates/console/: Cargo.toml
crates/console/src/: lib.rs  uart.rs
crates/driver-api/: Cargo.toml
crates/driver-api/src/: bus.rs  catalog.rs  dma.rs  lib.rs  net_notifier.rs
crates/driver-api/tests/: block_device.rs  bus_context.rs  char_device.rs  display_device.rs  dma_buffer.rs  input_device.rs  irq_handler.rs  net_device.rs  rng_device.rs
crates/drivers/: Cargo.toml
crates/drivers/src/: bochs_display.rs  lib.rs
crates/drivers/src/dwmac/: factory.rs  jh7110.rs  mod.rs
crates/drivers/src/virtio/: block.rs  capability.rs  input.rs  rng.rs  virtqueue.rs
crates/drivers/src/virtio/net/: mod.rs
crates/hal/: Cargo.toml
crates/hal/src/: lib.rs  mmio.rs  panic_support.rs  per_cpu.rs  spinlock.rs  validated_ptr.rs
crates/hal/src/memory/: mod.rs  page_table.rs
crates/hal/src/riscv64/: backtrace.rs  cpu.rs
crates/hal/src/riscv64/asm/: mod.rs  trap.S
crates/hal/src/riscv64/sbi/: sbi_call.rs
crates/hal/src/stub/: cache.rs  cpu.rs  sbi.rs  timer.rs
crates/kernel/: .gitignore  CMakeLists.txt  Cargo.toml  Kconfig  build.rs  riscv64.ld
crates/kernel/src/: assert.rs  byte_interpretable.rs  cpu.rs  device_tree.rs  lib.rs  panic.rs
crates/kernel/src/asm/: mod.rs
crates/kernel/src/autogenerated/: mod.rs
crates/kernel/src/debugging/: backtrace.rs  eh_frame_parser.rs  leb128.rs  mod.rs  symbols.rs  unwinder.rs
crates/kernel/src/device_tree/: bus_context.rs  mod.rs
crates/kernel/src/drivers/: bochs_display.rs  mod.rs  registry.rs
crates/kernel/src/drivers/dwmac/: mod.rs
crates/kernel/src/drivers/jh7110/: reset.rs
crates/kernel/src/drivers/virtio/: block.rs  capability.rs  input.rs  mod.rs  rng.rs  virtqueue.rs
crates/kernel/src/fs/: devfs.rs  mod.rs  open_file.rs  procfs.rs  tmpfs.rs  vfs.rs
crates/kernel/src/init/: mod.rs
crates/kernel/src/initramfs/: cpio.rs  mod.rs
crates/kernel/src/interrupts/: mod.rs  plic.rs  syscall_dispatch.rs  trap.rs
crates/kernel/src/io/: mod.rs  pipe.rs  tty_device.rs  uart.rs
crates/kernel/src/klibc/: big_endian.rs  consumable_buffer.rs  elf.rs  leb128.rs  mod.rs  non_empty_vec.rs  util.rs  writable_buffer.rs
crates/kernel/src/logging/: configuration.rs
crates/kernel/src/memory/: heap.rs  linker_information.rs  mod.rs  page_table_entry.rs  page_tables.rs  runtime_mappings.rs
crates/kernel/src/net/: arp.rs  checksum.rs  ethernet.rs  ipv4.rs  mac.rs  mod.rs  sockets.rs  tcp.rs  tcp_connection.rs  udp.rs
crates/kernel/src/pci/: address.rs  allocator.rs  bus_context.rs  devic_tree_parser.rs  lookup.rs  mod.rs  pci.ids
crates/kernel/src/platform/: dt.rs  mod.rs  reset.rs
crates/kernel/src/processes/: brk.rs  elf.rs  fd_table.rs  futex.rs  kernel_tasks.rs  loader.rs  mod.rs  process.rs  process_table.rs  scheduler.rs  signal.rs  syscall_runner.rs  task.rs  thread.rs  timer.rs  userspace_ptr.rs  wait_child.rs  waker.rs  writable_buffer.rs
crates/kernel/src/syscalls/: exec_ops.rs  fs_ops.rs  helpers.rs  id_ops.rs  io_ops.rs  ioctl_ops.rs  linux.rs  linux_validator.rs  macros.rs  mod.rs  net_ops.rs  process_ops.rs  signal_ops.rs  sysinfo_ops.rs  time_ops.rs  trace_config.rs  tracer.rs
crates/kernel/src/test/: array_vec.rs  big_endian.rs  leb128.rs  mod.rs  parser.rs  qemu_exit.rs  util.rs
crates/mm/: Cargo.toml
crates/mm/src/: heap.rs  lib.rs  page.rs  page_allocator.rs  util.rs
kernel/: Cargo.toml  build.rs  solaya.ld
kernel/compiled_userspace_nix/: doom  sh
kernel/src/: assert.rs  cpu.rs  device_tree.rs  lib.rs  main.rs  panic.rs
kernel/src/asm/: mod.rs
kernel/src/debugging/: backtrace.rs  eh_frame_parser.rs  mod.rs  symbols.rs
kernel/src/drivers/: bochs_display.rs  mod.rs  watchdog.rs
kernel/src/drivers/dwmac/: jh7110.rs  mod.rs
kernel/src/drivers/jh7110/: reset.rs
kernel/src/drivers/virtio/: block.rs  capability.rs  input.rs  mod.rs  rng.rs  virtqueue.rs
kernel/src/fs/: devfs.rs  mod.rs  open_file.rs  tmpfs.rs  vfs.rs
kernel/src/fs/ext2/: file.rs  inode.rs  mod.rs  structures.rs
kernel/src/interrupts/: plic.rs  trap.rs
kernel/src/io/: tty_device.rs  uart.rs
kernel/src/klibc/: elf.rs  mmio.rs  mod.rs  runtime_initialized.rs  spinlock.rs  util.rs
kernel/src/logging/: mod.rs
kernel/src/memory/: address.rs  heap.rs  linker_information.rs  mod.rs  page.rs  page_allocator.rs  page_table_entry.rs  page_tables.rs
kernel/src/net/: arp.rs  ipv4.rs  mod.rs  tcp.rs  tcp_connection.rs  udp.rs
kernel/src/pci/: mod.rs
kernel/src/processes/: credentials.rs  fd_table.rs  kernel_tasks.rs  loader.rs  mod.rs  process.rs  process_table.rs  scheduler.rs  signal.rs  thread.rs  timer.rs  userspace_ptr.rs
kernel/src/syscalls/: exec_ops.rs  fs_ops.rs  id_ops.rs  io_ops.rs  ioctl_ops.rs  linux.rs  linux_validator.rs  mm_ops.rs  mod.rs  net_ops.rs  net_stubs.rs  process_ops.rs  sysinfo_ops.rs  tracer.rs
kernel/src/test/: isa.rs  mod.rs  qemu_exit.rs
mcp-server/: Cargo.toml
mcp-server/src/: server.rs
sys/: Cargo.toml
sys/src/: cpu.rs  lib.rs  mmio.rs  panic_support.rs  raw_ptr.rs  runtime_initialized.rs  spinlock.rs
sys/src/asm/: boot.S  mod.rs
sys/src/io/: uart.rs
sys/src/klibc/: mmio.rs  mod.rs  runtime_initialized.rs  send_sync.rs  spinlock.rs  util.rs  validated_ptr.rs
sys/src/logging/: configuration.rs  mod.rs
sys/src/memory/: address.rs  mod.rs  page.rs  page_allocator.rs  page_table.rs
sys/src/riscv64/: asm.rs  cpu.rs  mod.rs  timer.rs  trap_cause.rs
sys/src/riscv64/sbi/: mod.rs  sbi_call.rs
sys/src/stub/: asm.rs  cpu.rs  sbi.rs  trap_cause.rs
toolchain/: CMakeLists.txt  pins.cmake
userspace/: CMakeLists.txt  Cargo.toml  Kconfig
userspace/.cargo/: config.toml
userspace/doom/: dg_solaya.c
userspace/src/: spawn.rs
userspace/static/: doom.html  index.html
(+159 files in other folders)
