[workspace]
members = [
    "boot",
    "crates/hal",
    "crates/common",
    "crates/headers",
    "crates/kernel",
    "crates/klib",
    "crates/mm",
    "userspace",
]
default-members = ["boot"]
resolver = "2"

[workspace.package]
description = "Solaya"
authors = ["Maurice Hieronymus <mhi@mailbox.org>"]
version = "0.1.0"

[profile.release]
panic = 'abort'
lto = "fat"
debug = true
overflow-checks = true
debug-assertions = true

[profile.dev]
panic = 'abort'
overflow-checks = true
