[package]
name = "common"
edition = "2024"
description.workspace = true
authors.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["riscv64"]
riscv64 = []

[lib]
test = false
bench = false
