cargo-features = ["per-package-target"]

[package]
name = "solaya"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
default-target = "riscv64gc-unknown-none-elf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["net", "tcp", "udp", "virtio-net", "virtio-blk", "smp", "ext2"]
net = []
tcp = ["net"]
udp = ["net"]
virtio-net = ["net"]
virtio-blk = []
smp = []
ext2 = ["virtio-blk"]

[dependencies]
sys = { path = "../sys" }
common = { path = "../common" }
headers = { path = "../headers" }

[[bin]]
name = "kernel"
path = "src/main.rs"
test = true

[dev-dependencies]
elf = { version = "0.8", default-features = false }
gimli = { version = "0.33", default-features = false, features = ["read"] }

[target.'cfg(not(miri))'.dev-dependencies]
unwinding = { version = "0.2.8", default-features = false, features = ["fde-static", "panic", "personality", "unwinder"] }
