[package]
name = "mcp-server"
edition = "2024"

[workspace]

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
tokio = { version = "1.43.1", features = ["full"] }
rmcp = { version = "1.5", features = ["server", "transport-io"] }
schemars = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
qemu-infra = { path = "../qemu-infra" }
