cargo-features = ["per-package-target"]

[package]
name = "sys"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
default-target = "riscv64gc-unknown-none-elf"

[lib]
bench = false

[dependencies]
arch = { path = "../arch" }
common = { path = "../common" }
headers = { path = "../headers" }
