cargo-features = ["per-package-target"]

[package]
name = "sys"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
default-target = "riscv64gc-unknown-none-elf"

[lib]
test = false
bench = false

[features]
default = ["riscv64"]
riscv64 = ["arch/riscv64", "common/riscv64"]

[dependencies]
arch = { path = "../arch", default-features = false }
common = { path = "../common", default-features = false }
headers = { path = "../headers" }
