[package]
name = "userspace"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { path = "../crates/abi" }
headers = { path = "../crates/headers" }

[lints]
workspace = true
