[package]
name = "console"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
common = { path = "../common", default-features = false }
hal = { path = "../hal", default-features = false }
klib = { path = "../klib" }

[lib]
test = false
bench = false
