[package]
name = "driver-api"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
abi = { path = "../abi", default-features = false }
hal = { path = "../hal", default-features = false }
headers = { path = "../headers" }
klib = { path = "../klib" }
mm = { path = "../mm" }

[lib]
test = true
bench = false
