[package]
name = "drivers"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
abi = { path = "../abi", default-features = false }
console = { path = "../console" }
driver-api = { path = "../driver-api" }
hal = { path = "../hal", default-features = false }
headers = { path = "../headers" }
klib = { path = "../klib" }
mm = { path = "../mm" }

[lib]
test = true
bench = false
