[package]
name = "hal"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[features]
default = ["riscv64"]
riscv64 = []

[dependencies]
common = { path = "../common", default-features = false }
klib = { path = "../klib" }

[lib]
test = false
bench = false
