[package]
name = "hal"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[features]
default = ["riscv64"]
riscv64 = []

[dependencies]
abi = { path = "../abi", default-features = false }
headers = { path = "../headers" }
klib = { path = "../klib" }

[lib]
test = false
bench = false

[lints]
workspace = true
