cargo-features = ["per-package-target"]

[package]
name = "solaya"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
default-target = "riscv64gc-unknown-none-elf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["arch/riscv64"]

[dependencies]
arch = { path = "../arch", default-features = false }
common = { path = "../common", default-features = false }
headers = { path = "../headers" }
sys = { path = "../sys", default-features = false }

[lib]
name = "solaya"
path = "src/lib.rs"
test = true

[dev-dependencies]
elf = { version = "0.8", default-features = false }
gimli = { version = "0.33", default-features = false, features = ["read"] }

[target.'cfg(not(miri))'.dev-dependencies]
unwinding = { version = "0.2.8", default-features = false, features = ["fde-static", "panic", "personality", "unwinder"] }
