cargo-features = ["per-package-target"]

[package]
name = "mm"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
default-target = "riscv64gc-unknown-none-elf"

[dependencies]
hal = { path = "../hal", default-features = false }
klib = { path = "../klib" }

[lib]
test = false
bench = false
